...
          Row(
            mainAxisAlignment: MainAxisAlignment.center,
            crossAxisAlignment: CrossAxisAlignment.center,
            children: [
              Text(
                "Coffee Recipes",
                key: Key("coffee-recipes"),
                textAlign: TextAlign.center,
                style: TextStyle(
                    fontSize: 24,
                    fontFamily: "Kollektif",
                    fontWeight: FontWeight.bold,
                    color: Color(0xff4C748B)),
...
                  crossAxisAlignment: CrossAxisAlignment.center,
                  children: [
                    Container(
                      height: 47,
                      child: RaisedButton(
                          //key for sweet marias button
                          key: Key("sweetMariasbutton"),
                          onPressed: () {
                            Navigator.push(
                              context,
                              MaterialPageRoute(
                                  builder: (context) =>
                                      RecipeDetailScreen(recipes[0])),
...

                    // select PT
                    Container(
                      height: 47,
                      child: RaisedButton(
                          //key for PT button
                          key: Key("PTsbutton"),
                          onPressed: () {
                            Navigator.push(
                              context,
                              MaterialPageRoute(
                                  builder: (context) =>
                                      RecipeDetailScreen(recipes[1])),
...
          Row(
            mainAxisAlignment: MainAxisAlignment.center,
            crossAxisAlignment: CrossAxisAlignment.center,
            children: [
              Text(
                "Resources",
                key: Key("resources"),
                textAlign: TextAlign.center,
                style: TextStyle(
                    fontSize: 24,
                    fontFamily: "Kollektif",
                    fontWeight: FontWeight.bold,
                    color: Color(0xff4C748B)),
...
                              mainAxisAlignment: MainAxisAlignment.spaceBetween,
                              children: [
                                Text(
                                  "Coffee",
                                  /////
                                  //key coffe notification
                                  key: Key("Coffee Notification"),
                                  style: TextStyle(
                                    fontSize: 18,
                                    fontWeight: FontWeight.w400,
                                    fontFamily: "Kollektif",
                                    color: Color(0xff4C748B),
                                  ),
...
                            child: Row(
                              mainAxisAlignment: MainAxisAlignment.spaceBetween,
                              children: [
                                Text(
                                  "Grinders", /////
                                  //key for grinder notification
                                  key: Key("Grinder Notification"),
                                  style: TextStyle(
                                    fontSize: 18,
                                    fontWeight: FontWeight.w400,
                                    fontFamily: "Kollektif",
                                    color: Color(0xff4C748B),
                                  ),
...
                            child: Row(
                              mainAxisAlignment: MainAxisAlignment.spaceBetween,
                              children: [
                                Text(
                                  "Kettles", /////
                                  //key for kettles notification
                                  key: Key("Kettles Notification"),
                                  style: TextStyle(
                                    fontSize: 18,
                                    fontWeight: FontWeight.w400,
                                    fontFamily: "Kollektif",
                                    color: Color(0xff4C748B),
                                  ),
...
                            child: Row(
                              mainAxisAlignment: MainAxisAlignment.spaceBetween,
                              children: [
                                Text(
                                  "Homebrew Dripper", /////
                                  //key for homebrew drippers notification
                                  key: Key("Homebrew Drippers Notification"),
                                  style: TextStyle(
                                    fontSize: 18,
                                    fontWeight: FontWeight.w400,
                                    fontFamily: "Kollektif",
                                    color: Color(0xff4C748B),
                                  ),
...
