...
          children: [
            Spacer(flex: 1),
            Container(
              child: Center(
                  child: Text(
                "enjoy your amazing \n handmade coffee",
                key: Key("enjoy"),
                style: TextStyle(
                  fontStyle: FontStyle.normal,
                  fontWeight: FontWeight.w400,
                  letterSpacing: 1,
                  color: Color(0xFF4C748B),
                  fontSize: 18,
...
                    mainAxisAlignment: MainAxisAlignment.end,
                    children: <Widget>[
                  SizedBox(
                    width: 280,
                    height: 46,
                    child: RaisedButton(
                      key: Key('done'),
                      child: Text("done",
                          style: TextStyle(
                            fontStyle: FontStyle.normal,
                            fontWeight: FontWeight.w400,
                            color: Color(0xFF4C748B),
                            fontSize: 18,
...
