...
                    Divider(
                      color: Colors.transparent,
                      height: 40,
                    ),
                    Text(
                      "${stepTimeRemaining}",
                      key: Key("remaining"),
                      style: TextStyle(
                          fontFamily: 'Kollektif',
                          fontSize: 96,
                          fontWeight: FontWeight.normal,
                          color: Color(0xffFFFFFF)),
                    ),
                    Divider(
                      color: Colors.transparent,
                      height: 40,
                    ),
                    Text(
                      "${currentRecipeStep.text}",
                      key: Key("current"),
                      style: TextStyle(
                        color: Color(0xffFFFFFF),
                        fontSize: 24,
                        fontFamily: 'Kollektif',
                      ),
                    ),
...
